--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "jest": "^29.5.0",
     "lint-staged": "^13.2.1",
     "standard": "^17.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
