--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "keywords": [],
   "author": "nathanSeixeiro",
   "license": "ISC",
+  "standard":{
+    "env": ["jest"]
+  },
   "lint-staged": {
     "*.js": [
       "standard --fix"
