--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "keywords": [],
   "author": "nathanSeixeiro",
   "license": "ISC",
-  "standard":{
-    "env": ["jest"]
+  "standard": {
+    "env": [
+      "jest"
+    ]
   },
   "devDependencies": {
-    "husky": "^8.0.3",
+    "husky": "^4.0.0-beta.5",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.1",
     "standard": "^17.0.0"
