--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "st": "lint-staged",
     "test": "jest --watchAll --silent --noStackTrace",
     "test:staged": "jest --passWithNoTests --findRelatedTests --silen --noStackTrace",
-    "test:ci": "jest --coverange --silent --noStackTrace"
+    "test:ci": "jest --coverage --silent --noStackTrace"
   },
   "repository": {
     "type": "git",
