add specifiy scripts and config files for unit and integration tests

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "st": "lint-staged",
     "test": "jest  --silent --noStackTrace --passWithNoTests",
-    "test:unit": "npm test -- --watch",
-    "test:staged": "npm test -- --findRelatedTests ",
+    "test:unit": "npm test -- --watch -c jest-unit-config.js",
+    "test:integration": "npm test -- --watch -c jest-integration-config.js",
+    "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage "
   },
   "repository": {
